# imitationLearning

./: .gitignore  Dockerfile  README.md  cmd  main.py  monitor.py  pyproject.toml  run_training.py  train.py  train_sb3.py  training.md
.claude/: settings.local.json
app/: app.py  requirements.txt
doc/: architecture.md  curriculum.md  encoder.md  environment.md  game.md  headlight_agent_spec.md  hf_blog.html  hf_blog.md  observation.md  plan.txt  train.md  training.md  vit_rl_agent_spec.md
env/: README.md  __init__.py  _openenv_compat.py  client.py  curriculum.py  encoder.py  environment.py  gym_env.py  models.py
game/: README.md  __init__.py  curriculum_game.py  oval_racer.py  rl_splits.py  test_tracks.py  tracks.py
hf_space/: .gitignore  README.md  deploy.ps1  requirements.txt
inference/: inference.py
training/: README.md  cmd  monitor.py  push_to_hub.py  test_video.py  train_cleanrl.py  train_torchrl.py
wandb/run-20260404_144135-y6l0ncme/: run-y6l0ncme.wandb
wandb/run-20260404_144135-y6l0ncme/files/: config.yaml  wandb-metadata.json
wandb/run-20260404_144211-lt18eoas/: run-lt18eoas.wandb
wandb/run-20260404_144211-lt18eoas/files/: conda-environment.yaml  config.yaml  wandb-metadata.json
wandb/run-20260404_144250-jios8nlc/: run-jios8nlc.wandb
wandb/run-20260404_144250-jios8nlc/files/: config.yaml  requirements.txt  (+1 more)
wandb/run-20260404_144409-aayc62ot/: run-aayc62ot.wandb
wandb/run-20260404_152424-881ivx4p/: run-881ivx4p.wandb
wandb/run-20260404_162613-yopa1a8k/: run-yopa1a8k.wandb
wandb/run-20260404_173115-urayb51j/: run-urayb51j.wandb
(+15 files in other folders)
