[project]
name = "imitationlearning"
version = "0.1.0"
description = "PPO-based curriculum imitation learning for a car racing environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "wandb[media]>=0.25.1",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "openenv>=0.1.13",
    "imageio>=2.35.0",
    "av>=14.0.0",
    "stable-baselines3[extra]>=2.3.0",
    "gymnasium>=0.29.0",
]
