[project]
name = "imitationlearning"
version = "0.1.0"
description = "PPO-based curriculum imitation learning for a car racing environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pygame-ce>=2.5.0",
    "wandb[media]>=0.25.1",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "imageio>=2.35.0",
    "av>=14.0.0",
    "gymnasium>=0.29.0",
    "openenv-core>=0.2.3",
    "torchrl>=0.6.0",
    "tensordict>=0.6.0",
    "gradio>=6.12.0",
    "pillow>=11.3.0",
]
